# clockify-invoice

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  Pipfile  README.md  api.py  app.py  client.py  clockify-invoice-config.example.json  clockify.py  docker-compose.yml  invoice.example.html  invoice.py  requirements.txt  setup.cfg
clockify/: __main__.py  api.py  app.py  client.py  exceptions.py  invoice.py  main.py  store.py
clockify/templates/: index.html  invoice.html
clockify_invoice/: __main__.py  api.py  config.py  email.py  invoice.py  main.py  store.py  utils.py
clockify_invoice/templates/: index.html  invoice.html
templates/: invoice.html
testing/: mock_responses.py
tests/: mock_responses.py  test_api.py
