[metadata]
name = clockify_invoice
version = 1.0.0
description = Create an invoice using clockifys API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jordanamos/clockify-invoice
author = Jordan Amos
author_email = jordan.amos@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
keywords = clockify invoice

[options]
packages = clockify
install_requires =
    Flask==2.2.2
    pandas==1.5.3
    requests==2.28.2
    weasyprint==57.2
python_requires = >=3.10

[flake8]
max-line-length = 88
extend-ignore = E203

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-tests.*]
disallow_untyped_defs = false
